<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="16dp"
    android:weightSum="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="163dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMain_temp"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="10.52"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/ivIcon"
                    android:layout_alignStart="@+id/ivIcon"
                    android:text="25 de Mayo"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMain_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/linearLayout"
                    android:layout_alignStart="@+id/linearLayout"
                    android:layout_below="@+id/txtFecha"
                    android:layout_marginTop="0dp"
                    android:text="@string/texto_no_disponible"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/txtDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_no_disponible"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/txtViento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/viento" />

                <TextView
                    android:id="@+id/txtMaxTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/max"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txtMinTemp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/txtHumedad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humedad"
                    android:textSize="16dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="172dp"
                android:layout_height="133dp"
                android:layout_alignTop="@+id/txtMain_temp"
                android:layout_marginTop="15dp"
                android:layout_toLeftOf="@+id/linearLayout"
                android:layout_toStartOf="@+id/linearLayout"
                app:srcCompat="@drawable/none_available" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/lineView"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="?android:attr/listDivider" />

</LinearLayout>